maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:22: error: value += is not a member of Int
  gauche();somAng+=1
                 ^Escaper:25: error: reassignment to val
    droite();somAng=somAng-1
                   ^Escaper:28: error: reassignment to val
      droite();somAng=somAng-1
                     ^