maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  var somAng=0

  while(estSurBiscuit==false){
  	ouAvance(somAng) match{
    	case 0 => avance()
    	case 1 => avance()
    	case 2 => avance()
    	case 3 => droite();avance()
      case 4 => avance()
      case 5 => droite()
  	}
	}
  
  prendBiscuit
}

def ouAvance(somAng:Int):Int ={
  if (getDirection()==Direction.NORD && estFaceMur==false){return 4}
  if (getDirection()==Direction.NORD && estFaceMur==true){return 5}
  gauche();somAng+=1
  if (estFaceMur==false){ return 0 }
  else{
    droite();somAng=somAng-1
    if(estFaceMur==false){ return 1 }
    else {
      droite();somAng=somAng-1
      if (estFaceMur==false){ return 2 }
      else{return 3}
    }
  }
}